refactor: Migrate to Java 17
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.java.migrate.UpgradeToJava17?organizationId=RGVmYXVsdA%3D%3D

Co-authored-by: Moderne <team@moderne.io>