@@ -68,8 +68,8 @@ final class CloseableWriteState implements HollowProducer.WriteState, AutoClosea
     private void ensureNotClosed() {
         if (closed) {
             throw new IllegalStateException(
-                    String.format("Write state operated on after the population stage of a cycle; version=%d",
-                            version));
+            "Write state operated on after the population stage of a cycle; version=%d".formatted(
+            version));
         }
     }
 
